# Alicorn0

./: Cargo.toml  REUSE.toml  evaluator.lua  flake.nix  glsl-prelude.alc  glsl-print.lua  lib.rs  prelude.alc  pretty-printer.lua  runtest.lua  terms-generators.lua  terms-pretty.lua  terms.lua  test-config.json  test-derive-eq.lua  test-derive-pretty-print.lua  test-eval.lua  test-fitsinto.lua  test-syntax-to-terms-to-eval.lua  test-terms.lua  test.lua  testlanguage.lua
notebooks/: runtest.jl
rust/crates/uniffi-bindgen-alicorn/: Cargo.toml
rust/crates/uniffi-bindgen-alicorn/src/: cli.rs  lib.rs  main.rs
tests/: host-if.alc  test-glsl-frag.alc  test-glsl-vert.alc
